fix(import): realign footer position at page bottom

--- a/src/index.css
+++ b/src/index.css
@@ -190,11 +190,11 @@ html {
 
 html,
 body,
-#root {
+#root .app {
   min-height: 100vh;
 }
 
-#root {
+#root .app {
   display: flex;
   flex-direction: column;
 }
